--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,6 @@ boto3==1.33.11
 fastapi==0.104.1
 fastapi-utils==0.2.1
 uvicorn[standard]==0.24.0.post1
-smart-open=6.4.0
-boto3-type-annotations=0.3.1
+smart-open==6.4.0
+boto3-type-annotations==0.3.1
+apscheduler==3.10.4
