--- a/config/server_config.ini
+++ b/config/server_config.ini
@@ -1,6 +1,7 @@
 [DEFAULT]
 API_SERVER = http://172.20.40.121:8700
 WORKERS = 5
+VERIFY_SSL = 0
 
 [SERVICE_DISCOVER]
 URL = http://172.20.40.121:7650
