--- a/config/server_config.ini
+++ b/config/server_config.ini
@@ -1,7 +1,9 @@
 [DEFAULT]
-API_SERVER = http://172.20.40.121:8700
+API_SERVER = https://172.20.40.121:8700
 WORKERS = 5
 VERIFY_SSL = 0
+HC_INTERVAL = 10
+CONTAINER_NAME = dns_server
 
 [SERVICE_DISCOVER]
 URL = http://172.20.40.121:7650
